tests/invalid/anys_in_negated_contexts.err_exp
anys_in_negated_contexts.m:041: In clause for `bad_if_then_else1(ia, out)':
anys_in_negated_contexts.m:041:   purity error: if-then-else should be inside a
anys_in_negated_contexts.m:041:   promise_purity scope because non-local
anys_in_negated_contexts.m:041:   variable `X' has inst `any' and appears in
anys_in_negated_contexts.m:041:   the condition.
anys_in_negated_contexts.m:059: In clause for `bad_negation1(ia)':
anys_in_negated_contexts.m:059:   purity error: negation should be inside a
anys_in_negated_contexts.m:059:   promise_purity scope because non-local
anys_in_negated_contexts.m:059:   variable `X' has inst `any' and appears in
anys_in_negated_contexts.m:059:   the body.
anys_in_negated_contexts.m:082: In clause for `bad_lambda(in)':
anys_in_negated_contexts.m:082:   mode error in conjunction. The next 2 error
anys_in_negated_contexts.m:082:   messages indicate possible causes of this
anys_in_negated_contexts.m:082:   error.
anys_in_negated_contexts.m:081:   In clause for `bad_lambda(in)':
anys_in_negated_contexts.m:081:   purity error: lambda is `ground' but contains
anys_in_negated_contexts.m:081:   the following non-local variables whose insts
anys_in_negated_contexts.m:081:   contain `any': Y.
anys_in_negated_contexts.m:081:   Predicate expressions with inst `any' can be
anys_in_negated_contexts.m:081:   written `any_pred(Args) is det :- ...'.
anys_in_negated_contexts.m:081:   Function expressions with inst `any' can be
anys_in_negated_contexts.m:081:   written
anys_in_negated_contexts.m:081:   `any_func(Args) = Result is det :- ...'.
anys_in_negated_contexts.m:082:   In clause for `bad_lambda(in)':
anys_in_negated_contexts.m:082:   in argument 1 (i.e. the predicate term) of
anys_in_negated_contexts.m:082:   higher-order predicate call:
anys_in_negated_contexts.m:082:   mode error: variable `P' has instantiatedness
anys_in_negated_contexts.m:082:   `free',
anys_in_negated_contexts.m:082:   expecting higher-order pred inst (of arity
anys_in_negated_contexts.m:082:   1).
